# jupyter_plot_extension

./: pyproject.toml
jupyter_plot_extension/: __init__.py  extension.py
nbi_extensions/jupyter-plot-extension/: extension.json
