[tool.poetry]
name = "jupyter-plot-extension"
version = "0.1.0"
description = ""
authors = ["MrArivazhagan <arivazhagan.1011d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook-intelligence = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
